syntax = "proto3";

message OutputAccount {
    string key_1=1;
    string branch_no= 2;
    string curr_status=3;
    string acct_type=4;
    string int_cat=5;
    string inv_type=6;
    string currency=7;
    string customer_no=8;
    double cr_limit=9;
    double curr_bal=10;
    double int_available=11;
    int64 acct_open_dt= 12;
    int64 int_from_dt=13;
    int64 int_to_dt=14;
    double no_dues=15;
    double var_int_rate=16;
    string rval_ind=17;
    int64 lst_ovr_limit_date=18;
    double cr_store_rate=19;
    double dr_store_rate=20;
    string gl_class_code=21;
    string mop_type=22;
    double instl_due_day=23;
    string lending_status=24;
    string npa_clsfn=25;
    string name=26;
    string cust_acc_no=27;
    string prim_accnt=28;
    string segment_code=29;
    string industry_code=30;
    string grup_code=31;
    string bus_sector_code=32;
    string tier_cust_type=33;
    string a1=34;
    string a2=35;
    double a3=36;
    int64 a4= 37;
    int64 a5= 38;
    int64 a6= 39;
    string a7=40;
    string a8=41;
    string a9=42;
    string a10=43;
    string gl_code= 44;
    double int_rate= 45;
    double curr_bal_lcy= 46;
    int64 as_on_date=47;
    string account_status=48;
    string a12=49;
    string a13=50;
    double a14=51;
    double a15=52;
    double a16=53;

}
